# GetMatched

./: .env.example  .gitignore  Procfile  README.md  pyproject.toml  pyrightconfig.json  railway.toml  requirements.txt  simulate.py  testing_checklist.md
daoc_bot/: __main__.py  commands.py  config.py  db.py  embeds.py  engine.py  event_log.py  guild_store.py  models.py  simulation.py  state.py
daoc_bot/views/: team_panel.py
docs/: testing_checklist.md
scripts/: run_simulation.py  simulate.py
tests/: conftest.py
tests/integration/: test_matchmaking_flow.py
tests/unit/: test_embeds.py  test_engine.py  test_event_log.py  test_models.py  test_state.py
